Update .gitignore to ignore Python, model, and macOS files

--- a/Sabhyata_tiaro/.gitignore
+++ b/Sabhyata_tiaro/.gitignore
@@ -1,1 +1,76 @@
+# macOS system files
 .DS_Store
+
+# Python bytecode
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Jupyter notebook checkpoints
+.ipynb_checkpoints/
+
+# Virtual environments
+.env
+.venv/
+env/
+venv/
+
+# Distribution / packaging
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# PyInstaller
+*.manifest
+*.spec
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# Logs and temporary files
+*.log
+*.bak
+*.tmp
+
+# Model files
+*.pkl
+*.joblib
+*.h5
+*.tflite
+*.onnx
+
+# Ignore secret files
+*.key
+*.pem
+ngrok_recovery_codes.txt
+
+# VSCode settings
+.vscode/
